--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "multer": "^2.0.2",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
+    "node-cron": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
@@ -57,6 +58,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.9",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
