--- a/package.json
+++ b/package.json
@@ -56,15 +56,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.9",
     "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "postcss": "^8.4.32",
     "prisma": "^6.13.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
